# yaqc-cmds

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CurveFit.py  LICENSE  PyCMDS.ini  PyCMDS.py  PyCMDS_ui.py  README.md  main.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
autonomic/: coset.py
coset/: coset.ini  coset.py  coset_save.ini
coset/files/: d1_w1 large.coset  d1_w1.coset  d1_w2.coset  d2_w2.coset
daq/: autocopy.ini  current.py  daq.ini  daq.py  test_daq.py
daq/InGaAs_array/: InGaAs.ini  InGaAs.py  InGaAs_test.py
daq/InGaAs_array_detector/: InGaAs.ini  InGaAs.py  InGaAs_test.py
daq/NI_6251/: NI_6251.ini  NI_6251.py
daq/NI_6255/: NI_6255.ini  NI_6255.py
daq/shots_processing_modules/: mean_and_variance.py
daq/testing/: test_daq.py  test_plot.py
delays/: LTS300.py  SMC100.py  delays.ini  delays.py  test.py
delays/Dynacron/: interface_with_dynacron.py
delays/LTS300/: DLL.py  LTS300.ini  LTS300.py  QT.py  __init__.py  stackexchange.py
delays/SMC100/: SMC100.ini  SMC100.py
delays/pico/: pico_delay.ini  pico_delay.py
devices/: __init__.py  devices.py
devices/InGaAs_array/: InGaAs.py  InGaAs_test.py  __init__.py
devices/NI_6251/: NI_6251.py
devices/PCI-6251/: PCI-6251.py
devices/environmental_sensors/: environmental_sensors.py
docs/: autonomic.rst  conf.py  index.rst
examples/example driver/: driver.py
hardware/: __init__.py  _delay.py  _filter.py  _hardware.py  _initialize.py  _opa.py  _spectrometer.py  hardware.py
modules/: 1Dslice.py  Abitrary_Scan.py  Delay_slice.py  Pico_tune_crv_generator.py  Snake.py  Snaker.py  TOPAS_C_autotune.ini  TOPAS_C_autotune.py  custom.py  delay_scan.py  freq_scan.py  modules.ini  mono_scan.py  mono_slice.py  motortune.ini  motortune.py  motortune_temp.py  motortune_test.py  oneDscan.py  scan.py  scan_module.py  snake.py  spec_delay.py  template.py  test_coset.py  tune_test.ini  tune_test.py
nds/: nds.ini
opas/: opas.ini  opas.py  opas_vertual_version.py
project/: PyCMDS.ini  classes.py  com_handler.py  custom_widgets.py  file_dialog_handler.py  global_classes.py  ini_handler.py  kit.py  logging_handler.py  play.py  project_globals.py  style.py  widgets.py
pycmds/: PyCMDS.py  __init__.py  __main__.py  __version__.py  _main_window.py  _plot.py  _pycmds.py  _record.py  _sensors.py  config-template.toml  fake-continuous-hardware-config.toml
somatic/: acquisition.py  queue.py
spectrometers/: MicroHR.py  __init__.py  spectrometers.ini  spectrometers.py  spectrometers_old.py
yaqc_cmds/: VERSION  __init__.py  __main__.py  __version__.py  _main_window.py  _plot.py  config-template.toml
(+361 files in other folders)
