[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqc_cmds"
dist-name = "yaqc-cmds"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://github.com/wright-group/yaqc-cmds"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
requires = ["appdirs",
            "click",
	    "pyqtgraph",
	    "pyside2",
	    "qtpy",
	    "toml",
	    "wrighttools",
	    ]

[tool.flit.scripts]
yaqc-cmds = "yaqc_cmds.__main__:main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
